--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ nav{
 li{	display: inline-block;
 	list-style-type: none;
 	margin-right: 33px;
-	font-size: 20px;
+	font-size: 21px;
 	font-weight: 700;
 	padding-bottom: 20px;
 	padding-top: 19px;
@@ -41,10 +41,10 @@ li{	display: inline-block;
 }
 a{
 	text-decoration: none;
-	color: #000;
+	color: #030303;
 }
 li:hover{
-	border-bottom: solid 2px #756257;
+	border-bottom: solid 2px #6c5b51;
 	}
 
 }
@@ -86,7 +86,7 @@ img{ display: block;
  }
  h2{
  	text-align: center;
- 	color: #81B3D3;
+ 	color: #8abdde;
  	text-transform: uppercase;
  	font-size: 50px;
  	letter-spacing: 0.01em;
